# snappi-sdk

./: .actrc  .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml
.github/events/: local-testing-event.json
.github/workflows/: snappi-gha-test.yaml
apps/storybook-demo/: package.json  snappi.config.json  tsconfig.json
apps/storybook-demo/.storybook/: preview.tsx
apps/storybook-demo/src/components/button/: button.stories.tsx  button.tsx
apps/storybook-demo/src/components/card/: card.stories.tsx  card.tsx
apps/storybook-demo/storybook-static/: iframe.html  index.html  index.json  project.json
apps/storybook-demo/storybook-static/assets/: Color-F6OSRLHC-CGGygyBY.js  DocsRenderer-CFRXHY34-DBh5Y2aE.js  button.stories-CHD_QO-e.js  card.stories-CemoEcEz.js  entry-preview-DEWdvrVL.js  entry-preview-docs-CZUoTB3q.js  iframe-sKYaD72g.js  index-CFsUX4yg.js  index-D3zUwCKq.js  index-DRNzCPPB.js  preview-B_wo3owX.js  preview-CjF_YsPj.js  react-18-ClppWIpC.js
docs/: README.md
docs/docs/architecture/: github-action.md  message-queue.md  overview.md  rust-backend.md  typescript-sdk.md
services/snappi-core/: .gitignore  Cargo.toml
services/snappi-core/src/: main.rs
services/snappi-core/src/config/: database.rs
services/snappi-core/src/handlers/: mod.rs
services/snappi-core/src/router/: api.rs  mod.rs
services/snappi-core/src/state/: mod.rs
services/snappi-core/src/utils/: mod.rs  response.rs
services/snappi-core/terraform/: main.tf  provider.tf  variables.tf
