[package]
name = "snappi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1.42", features = ["full"] }
dotenvy = "0.15"
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", ] }
tracing = "0.1.41"
